# HTFH-RT-Search-Cache

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yaml  out.txt  prune_logs.py  run.sh
src/: dqht_test.c  main.c  math_utils.h  memory_utils.h  random_test.c  result.c  result.h  struct_utils.h
src/allocator/: alloc_manager.h  block.h  controller.c  controller.h  htfh.c  htfh.h  reference_counter.h  utils.c
src/allocator/error/: allocator_errno.c  allocator_errno.h
src/allocator/glibc/: glibc.c  glibc.h  static_allocator.h
src/allocator/htfh/: block.c  block.h  constants.h  controller.h  htfh.c  htfh.h  htfh_utils.c  htfh_utils.h  utils.h
src/allocator/thread/: lock.h
src/cache/: cache.c  cache.h  cache_backing.h  cache_key.h
src/cache/dequeue_hashtable/: dq_hashtable.c  dq_hashtable.h  dq_ht_entry.c  dq_ht_entry.h  hashing.h
src/cache/dlirs/: dlirs.c  dlirs.h  dlirs_entry.c  dlirs_entry.h
src/cache/hashtable/: cache_hashtable.c  cache_hashtable.h  cache_ht_entry.c  cache_ht_entry.h  dq_ht_entry.c  dq_ht_entry.h  hashing.h
src/cache/heap_hashtable/: atomic_utils.h  heap_entry.c  heap_entry.h  heaptable.c  heaptable.h
src/cache/lru/: lru.c  lru.h
src/cache/simple/: random.c  random.h
src/dlirs/: dlirs.c  dlirs.h
src/error/: allocator_errno.c  allocator_errno.h
src/htfh/: block.h  constants.h  controller.c  controller.h  htfh.c  htfh.h
src/logging/: ansi_colour_codes.h  logging.c  logging.h
src/preprocessor/: checks.h  lambda.h
src/thread/: lock.h
